used svh for hero section on index

--- a/public/style.css
+++ b/public/style.css
@@ -26,7 +26,7 @@ a{
 
 #hero{
     background-color: #121212;
-    height: 100vh;
+    height: 100svh;
     display: flex;
     flex-direction: column;
     justify-content: center;
